compiler/testData/diagnostics/tests/script/resolveInitializerOfDestructuringDeclarationOnce.kts
konst (a, b, c) = A<!NO_VALUE_FOR_PARAMETER!>()<!>

class A(konst a: Int) {
    operator fun component1() {}
    operator fun component2() {}
    operator fun component3() {}
}